--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 # VS Code
 .vscode
 
-# Penobit CMS cache and logs directories
+# Penobit CMS
 /core/app/storage/cache/
 /core/app/storage/logs/
+.env
